--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ FONNTE_WEBHOOK_URL=https://your-domain.com/webhook/fonnte
 
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key
-OPENAI_MODEL=gpt-4-turbo-preview
+OPENAI_BASE_URL=https://ai.sumopod.com/v1
+OPENAI_MODEL=gpt-4o-mini
 OPENAI_MAX_TOKENS=1000
 
 # Image Generation
